engine-net-2/examples/Errors/SequenceUnknownCompiled.grg
#include "Rules.grg"

sequence s1
{
	(n:N)=init ;> (m:M)=ss()
}
